--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,9 @@
 {
     "name": "jaybeaton/muser-drupal-project",
-    "description": "Project template for Drupal 8 Muser projects with composer",
+    "description": "Project template for Drupal Muser projects with Composer",
     "type": "project",
     "license": "GPL-2.0-or-later",
-    "authors": [
-        {
-            "name": "",
-            "role": ""
-        }
-    ],
+    "homepage": "https://www.drupal.org/project/muser",
     "repositories": [
         {
             "type": "composer",
@@ -17,100 +12,141 @@
         {
             "type": "package",
             "package": {
-                "name": "farbelous/fontawesome-iconpicker",
-                "version": "v1.3.1",
+                "name": "drupal/muser",
+                "version": "3.0.x-dev",
+                "type": "drupal-profile",
+                "source": {
+                    "url": "https://git.drupalcode.org/project/muser.git",
+                    "type": "git",
+                    "reference": "3.0.x"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "npm-asset/fontawesome-iconpicker",
+                "version": "v3.3.1",
                 "type": "drupal-library",
                 "extra": {
                     "installer-name": "fontawesome-iconpicker"
                 },
                 "dist": {
-                    "url": "https://github.com/farbelous/fontawesome-iconpicker/archive/1.3.1.zip",
+                    "url": "https://github.com/seanbeaton/fontawesome-iconpicker/archive/3.3.1.zip",
                     "type": "zip"
                 },
                 "require": {
                     "composer/installers": "~1.0"
                 }
             }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "fortawesome/font-awesome5",
+                "version": "v5.15.4",
+                "type": "drupal-library",
+                "dist": {
+                    "url": "https://github.com/FortAwesome/Font-Awesome/archive/5.15.4.zip",
+                    "type": "zip"
+                },
+                "require": {
+                    "composer/installers": "~1.0"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "drupal/fontawesome_iconpicker_enhanced",
+                "version": "1.x-dev",
+                "type": "drupal-module",
+                "source": {
+                    "url": "https://github.com/seanbeaton/fontawesome_iconpicker_enhanced.git",
+                    "type": "git",
+                    "reference": "master"
+                }
+            }
         }
     ],
     "require": {
+        "php": ">=7.4",
+        "ext-dom": "*",
+        "ext-json": "*",
+        "ext-libxml": "*",
+        "ext-simplexml": "*",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
-        "drupal-composer/drupal-scaffold": "^2.5",
-        "drupal/admin_toolbar": "^1.23",
-        "drupal/basicshib": "^1.0@alpha",
-        "drupal/better_exposed_filters": "^3.0@alpha",
+        "dompdf/dompdf": "^1.0",
+        "drupal/admin_toolbar": "^2.0",
+        "drupal/basicshib": "2.x-dev",
+        "drupal/better_exposed_filters": "^5.0",
         "drupal/chosen": "^2.6",
+        "drupal/ckeditor_details": "^2.0",
         "drupal/config_ignore": "^2.1",
         "drupal/config_split": "^1.4",
-        "drupal/console": "^1.0.2",
         "drupal/contact_block": "^1.4",
-        "drupal/core": "^8.6",
+        "drupal/core-composer-scaffold": "^9",
+        "drupal/core-recommended": "^9",
         "drupal/ctools": "^3.0",
         "drupal/datetimehideseconds": "1.x-dev",
-        "drupal/devel": "^1.2",
+        "drupal/devel": "^4.0",
         "drupal/entity_reference_exposed_filters": "^1.0@alpha",
-        "drupal/entity_reference_revisions": "^1.6",
-        "drupal/field_group": "^1.0",
+        "drupal/entity_reference_revisions": "^1.4",
+        "drupal/field_group": "^3.0",
         "drupal/flag": "^4.0@alpha",
-        "drupal/flag_conditional_confirm": "1.x-dev",
-        "drupal/fontawesome_iconpicker": "^1.0@beta",
+        "drupal/flag_conditional_confirm": "^2.0",
+        "drupal/fontawesome_iconpicker": "^2.0@RC",
+        "drupal/fontawesome_iconpicker_enhanced": "1.x-dev",
         "drupal/google_analytics": "^2.2",
-        "drupal/honeypot": "^1.27",
+        "drupal/honeypot": "^2.0",
         "drupal/link_attributes": "^1.2",
         "drupal/masquerade": "^2.0@beta",
         "drupal/maxlength": "^1.0@beta",
         "drupal/metatag": "^1.5",
-        "drupal/muser": "1.x-dev",
+        "drupal/muser": "3.0.x-dev",
         "drupal/pathauto": "^1.1",
         "drupal/queue_mail": "^1.0@alpha",
         "drupal/rabbit_hole": "^1.0@beta",
-        "drupal/realname": "^1.0@RC",
-        "drupal/redirect": "^1.1",
+        "drupal/realname": "^2.0",
+        "drupal/redirect": "^1.7",
+        "drupal/redis": "^1.2",
         "drupal/roleassign": "^1.0@alpha",
-        "drupal/smtp": "^1.0@beta",
+        "drupal/smart_trim": "^1.3",
         "drupal/token": "^1.1",
         "drupal/views_ajax_history": "^1.0",
-        "drupal/views_bulk_operations": "^2.4",
+        "drupal/views_bulk_operations": "^4.1",
         "drupal/views_data_export": "^1.0",
-        "drush/drush": "^9.0.0",
-        "harvesthq/chosen": "^1.8",
-        "oomphinc/composer-installers-extender": "^1.1",
-        "vlucas/phpdotenv": "^2.4",
-        "webflo/drupal-finder": "^1.0.0",
-        "webmozart/path-util": "^2.3",
-        "zaporylie/composer-drupal-optimizations": "^1.0"
-    },
-    "require-dev": {
-        "webflo/drupal-core-require-dev": "^8.6.0"
+        "drush/drush": "^9.7.1 | ^10.0.0",
+        "fortawesome/font-awesome5": "^5.15",
+        "kint-php/kint": "^3.3",
+        "npm-asset/fontawesome-iconpicker": "3.3.1 as 1.3.1",
+        "phpoffice/phpword": "^0.18.2",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.3"
     },
     "conflict": {
-        "twig/twig": "1.38",
         "drupal/drupal": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
-    },
-    "autoload": {
-        "classmap": [
-            "scripts/composer/ScriptHandler.php"
-        ],
-        "files": ["load.environment.php"]
+
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true
+        },
+        "sort-packages": true,
+        "process-timeout": 900
     },
     "scripts": {
-        "pre-install-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
-        ],
-        "pre-update-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
-        ],
+        "remove-git-submodules": "find . -mindepth 2 -type d -name .git | xargs rm -rf",
         "post-install-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+            "@remove-git-submodules"
         ],
         "post-update-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+            "@remove-git-submodules"
         ]
     },
     "extra": {
@@ -118,39 +154,54 @@
         "patchLevel": {
             "drupal/core": "-p2"
         },
-        "installer-paths": {
-            "web/core": ["type:drupal-core"],
-            "web/libraries/{$name}": [
-                "type:drupal-library",
-                "harvesthq/chosen"
-            ],
-            "web/modules/contrib/{$name}": ["type:drupal-module"],
-            "web/profiles/contrib/{$name}": ["type:drupal-profile"],
-            "web/themes/contrib/{$name}": ["type:drupal-theme"],
-            "drush/Commands/{$name}": ["type:drupal-drush"]
-        },
-        "installer-types": ["library"],
         "drupal-scaffold": {
-            "initial": {
-                ".editorconfig": "../.editorconfig",
-                ".gitattributes": "../.gitattributes"
+            "locations": {
+                "web-root": "web/"
+            },
+            "file-mapping": {
+                "[web-root]/sites/default/default.settings.php": {
+                    "mode": "replace",
+                    "path": "assets/default.settings.php",
+                    "overwrite": true
+                },
+                "[web-root]/sites/example.settings.local.php": {
+                    "append": "assets/example.settings.local.additions.php"
+                }
             }
         },
+        "installer-paths": {
+            "web/core": [
+                "type:drupal-core"
+            ],
+            "web/libraries/{$name}": [
+                "type:drupal-library"
+            ],
+            "web/modules/contrib/{$name}": [
+                "type:drupal-module"
+            ],
+            "web/profiles/{$name}": [
+                "type:drupal-profile"
+            ],
+            "web/themes/contrib/{$name}": [
+                "type:drupal-theme"
+            ],
+            "drush/Commands/contrib/{$name}": [
+                "type:drupal-drush"
+            ],
+            "web/modules/custom/{$name}": [
+                "type:drupal-custom-module"
+            ],
+            "web/themes/custom/{$name}": [
+                "type:drupal-custom-theme"
+            ]
+        },
         "patches": {
-            "drupal/basicshib": {
-                "Authentication status problem after Shibboleth timeout": "https://www.drupal.org/files/issues/2019-03-01/3036887-2.onrequest-event-priority.patch",
-                "'after_login' parameter value in login URL is incorrect when user is on page requiring authentication": "https://www.drupal.org/files/issues/2019-03-01/3036894-2.redirect-url-after-login.patch"
-            },
-            "drupal/better_exposed_filters": {
-                "Notice: Undefined index: #summary_attributes in template_preprocess_details()": "https://www.drupal.org/files/issues/2018-10-05/bef-summary-attributes-3001967-4.patch"
-            },
             "drupal/config_ignore": {
-                "Support for export filtering via Drush": "https://www.drupal.org/files/issues/2018-04-19/support-for-export-2857247-18.patch"
+                "Support for export filtering via Drush": "https://www.drupal.org/files/issues/2021-01-04/config_ignore_2857247-61.patch"
             },
             "drupal/core": {
                 "Allow Tours to be taken by users that cannot access the Toolbar (e.g. anonymous users)": "patches/2069073-64.local-reroll.patch",
-                "TypeError: Argument 1 passed to _editor_get_file_uuids_by_field() must implement interface Drupal\\\\Core\\\\Entity\\\\EntityInterface - Issue for users created by Shib": "https://www.drupal.org/files/issues/2018-11-08/2974156-editor-typeerror-9.patch",
-                "Add jQuery Timepicker for the Time element of the datetime field": "patches/1838234-8.6-jQuery_timepicker_step.patch"
+                "TypeError: Argument 1 passed to _editor_get_file_uuids_by_field() must implement interface Drupal\\\\Core\\\\Entity\\\\EntityInterface - Issue for users created by Shib": "https://www.drupal.org/files/issues/2018-11-08/2974156-editor-typeerror-9.patch"
             },
             "drupal/entity_reference_revisions": {
                 "Views doesn't recognize relationship to host": "https://www.drupal.org/files/issues/2019-10-07/2799479-91-DO_NOT_COMMIT.patch"
@@ -158,14 +209,14 @@
             "drupal/flag": {
                 "Add basic theming for Flagging entities": "https://www.drupal.org/files/issues/2019-01-28/2460141-9.theme-flagging-entity.patch"
             },
-            "drupal/fontawesome_iconpicker": {
-                "Support v3 of fontawesome-iconpicker libary": "patches/fontawesome_iconpicker-support-v3-library.patch"
-            },
             "drupal/masquerade": {
-                "Allow UnMasquerade link in the \"Masquerade\" block": "https://www.drupal.org/files/issues/2019-03-05/2900413-8.show-unmasquerade-link-in-block.patch"
+                "Allow UnMasquerade link in the \"Masquerade\" block": "https://www.drupal.org/files/issues/2021-03-02/2900413-33.patch"
             },
-            "drupal/queue_mail": {
-               "Provide return value to indicate that mail was successfully queued": "https://www.drupal.org/files/issues/2019-03-12/3039506-2.add-return-value.patch"
+            "drupal/realname": {
+                "Real name changes the entity reference behavior with views": "https://www.drupal.org/files/issues/2020-06-28/autocomplete-condition-fix-3059311-5.patch"
+            },
+            "drupal/redirect": {
+                "Make views_ajax_history a dependency of recurring_events to avoid 'The ajax_history plugin does not exist' error @ installation of recurring events module view.": "patches/fix-installation-dependencies-issue.patch"
             }
         }
     }
