--- a/composer.json
+++ b/composer.json
@@ -143,7 +143,8 @@
     "scripts": {
         "remove-git-submodules": "find . -mindepth 2 -type d -name .git | xargs rm -rf",
         "post-install-cmd": [
-            "@remove-git-submodules"
+            "@remove-git-submodules",
+            "mkdir -p web/sites/default/files"
         ],
         "post-update-cmd": [
             "@remove-git-submodules"
