--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,21 @@
         {
             "type": "package",
             "package": {
+                "name": "kenwheeler/slick",
+                "version": "v1.8.0",
+                "type": "drupal-library",
+                "dist": {
+                    "url": "https://github.com/kenwheeler/slick/archive/refs/tags/1.8.0.zip",
+                    "type": "zip"
+                },
+                "require": {
+                    "composer/installers": "~1.0"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
                 "name": "drupal/fontawesome_iconpicker_enhanced",
                 "version": "1.x-dev",
                 "type": "drupal-module",
@@ -81,8 +96,11 @@
         "drupal/admin_toolbar": "^2.0",
         "drupal/basicshib": "2.x-dev",
         "drupal/better_exposed_filters": "^5.0",
-        "drupal/chosen": "^2.6",
+        "drupal/block_content_permissions": "^1.10",
+        "drupal/chosen": "^3.0",
         "drupal/ckeditor_details": "^2.0",
+        "drupal/colorbox": "^1.10",
+        "drupal/colorbox_media_video": "^1.0",
         "drupal/config_ignore": "^2.1",
         "drupal/config_split": "^1.4",
         "drupal/contact_block": "^1.4",
@@ -104,6 +122,8 @@
         "drupal/masquerade": "^2.0@beta",
         "drupal/maxlength": "^1.0@beta",
         "drupal/metatag": "^1.5",
+        "drupal/oembed_providers": "^2.1",
+        "drupal/paragraphs": "^1.14",
         "drupal/muser": "3.0.x-dev",
         "drupal/pathauto": "^1.1",
         "drupal/queue_mail": "^1.0@alpha",
@@ -114,16 +134,20 @@
         "drupal/roleassign": "^1.0@alpha",
         "drupal/smart_trim": "^1.3",
         "drupal/token": "^1.1",
+        "drupal/twig_field_value": "^2.0",
         "drupal/views_ajax_history": "^1.0",
         "drupal/views_bulk_operations": "^4.1",
         "drupal/views_data_export": "^1.0",
         "drush/drush": "^9.7.1 | ^10.0.0",
         "fortawesome/font-awesome5": "^5.15",
+        "kenwheeler/slick": "^1.8",
         "kint-php/kint": "^3.3",
         "npm-asset/fontawesome-iconpicker": "3.3.1 as 1.3.1",
         "phpoffice/phpword": "^0.18.2",
         "setasign/fpdf": "^1.8",
-        "setasign/fpdi": "^2.3"
+        "setasign/fpdi": "^2.3",
+        "symfony/css-selector": "^5.2",
+        "symfony/dom-crawler": "^4.0"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -201,6 +225,12 @@
             ]
         },
         "patches": {
+            "drupal/block_content_permissions": {
+                "Allow accessing the \"Custom block library\" page without \"Administer blocks\" permission": "https://www.drupal.org/files/issues/2022-07-26/2920739-55.access_listing_page.patch"
+            },
+            "drupal/colorbox_media_video": {
+                "Add is_responsive_video field to colorbox media video fields": "https://www.drupal.org/files/issues/2022-07-27/3300344-3.colorbox_media_video--responsive-video-option.patch"
+            },
             "drupal/config_ignore": {
                 "Support for export filtering via Drush": "https://www.drupal.org/files/issues/2021-01-04/config_ignore_2857247-61.patch"
             },
@@ -209,7 +239,8 @@
                 "TypeError: Argument 1 passed to _editor_get_file_uuids_by_field() must implement interface Drupal\\\\Core\\\\Entity\\\\EntityInterface - Issue for users created by Shib": "https://www.drupal.org/files/issues/2018-11-08/2974156-editor-typeerror-9.patch"
             },
             "drupal/entity_reference_revisions": {
-                "Views doesn't recognize relationship to host": "https://www.drupal.org/files/issues/2019-10-07/2799479-91-DO_NOT_COMMIT.patch"
+                "Views doesn't recognize relationship to host": "https://www.drupal.org/files/issues/2019-10-07/2799479-91-DO_NOT_COMMIT.patch",
+                "Use getSingularLabel() instead of deprecated getLowercaseLabel()": "https://www.drupal.org/files/issues/2022-06-14/entity-reference-revisions-3285576.patch"
             },
             "drupal/flag": {
                 "Add basic theming for Flagging entities": "https://www.drupal.org/files/issues/2019-01-28/2460141-9.theme-flagging-entity.patch"
@@ -221,7 +252,7 @@
                 "Real name changes the entity reference behavior with views": "https://www.drupal.org/files/issues/2020-06-28/autocomplete-condition-fix-3059311-5.patch"
             },
             "drupal/redirect": {
-                "Make views_ajax_history a dependency of recurring_events to avoid 'The ajax_history plugin does not exist' error @ installation of recurring events module view.": "patches/fix-installation-dependencies-issue.patch"
+                "Make views_ajax_history a dependency of redirect to avoid 'The ajax_history plugin does not exist' error @ installation of redirect module view.": "patches/fix-installation-dependencies-issue.patch"
             }
         }
     }
