update composer.json to add 'provides' to fix issue with colorbox_media_video preventing update to 9.4.5

--- a/composer.json
+++ b/composer.json
@@ -152,6 +152,9 @@
     "conflict": {
         "drupal/drupal": "*"
     },
+    "provide": {
+        "drupal/media": "*"
+    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
