--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": "^7.4",
         "ext-dom": "*",
         "ext-json": "*",
         "ext-libxml": "*",
