--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,18 @@
                     "reference": "master"
                 }
             }
+        },
+        {
+            "type": "package",
+            "package": {
+              "name": "jackmoore/colorbox",
+              "version": "1.6.4",
+              "type": "drupal-library",
+              "dist": {
+                "url": "https://github.com/jackmoore/colorbox/archive/1.6.4.zip",
+                "type": "zip"
+              }
+            }
         }
     ],
     "require": {
@@ -140,6 +152,7 @@
         "drupal/views_data_export": "^1.0",
         "drush/drush": "^9.7.1 | ^10.0.0",
         "fortawesome/font-awesome5": "^5.15",
+        "jackmoore/colorbox": "^1.6",
         "kenwheeler/slick": "^1.8",
         "kint-php/kint": "^3.3",
         "npm-asset/fontawesome-iconpicker": "3.3.1 as 1.3.1",
