--- a/composer.json
+++ b/composer.json
@@ -40,18 +40,6 @@
         {
             "type": "package",
             "package": {
-                "name": "appolodev/vanilla-icon-picker",
-                "version": "1.2.0",
-                "type": "drupal-library",
-                "dist": {
-                    "url": "https://github.com/AppoloDev/vanilla-icon-picker/archive/refs/tags/1.2.0.zip",
-                    "type": "zip"
-                }
-            }
-        },
-        {
-            "type": "package",
-            "package": {
               "name": "jackmoore/colorbox",
               "version": "1.6.4",
               "type": "drupal-library",
@@ -63,15 +51,15 @@
         }
     ],
     "require": {
-        "php": "^8",
+        "php": ">=8.1",
         "ext-dom": "*",
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
-        "dompdf/dompdf": "^1.0",
-        "drupal/admin_toolbar": "^2.0",
+        "dompdf/dompdf": "^3.0",
+        "drupal/admin_toolbar": "^3.0",
         "drupal/basicshib": "^2.0",
         "drupal/better_exposed_filters": "^6.0",
         "drupal/block_content_permissions": "^1.10",
@@ -79,43 +67,44 @@
         "drupal/ckeditor_details": "^2.1@alpha",
         "drupal/colorbox": "^2.0",
         "drupal/colorbox_media_video": "^2.0",
-        "drupal/config_ignore": "^2.1",
-        "drupal/config_split": "^1.4",
         "drupal/contact_block": "^2.0",
-        "drupal/core-composer-scaffold": "^9",
-        "drupal/core-recommended": "^9",
+        "drupal/core-composer-scaffold": "^10",
+        "drupal/core-recommended": "^10",
         "drupal/ctools": "^4.0",
-        "drupal/datetimehideseconds": "1.x-dev",
+        "drupal/datetimehideseconds": "^1.3",
         "drupal/devel": "^5.0",
         "drupal/entity_reference_exposed_filters": "^2.0@alpha",
         "drupal/entity_reference_revisions": "^1.4",
         "drupal/field_group": "^3.0",
         "drupal/flag": "^4.0@alpha",
         "drupal/flag_conditional_confirm": "^2.1",
-        "drupal/fontawesome_iconpicker": "^3.0@alpha",
+        "drupal/fontawesome_iconpicker": "^3.0",
         "drupal/google_analytics": "^4.0",
         "drupal/honeypot": "^2.1",
-        "drupal/link_attributes": "^1.2",
         "drupal/login_history": "^2.0@alpha",
         "drupal/masquerade": "^2.0@beta",
-        "drupal/maxlength": "^1.0@beta",
-        "drupal/metatag": "^1.5",
+        "drupal/maxlength": "^2.1",
+        "drupal/metatag": "^2.0",
         "drupal/oembed_providers": "^2.1",
         "drupal/paragraphs": "^1.14",
         "drupal/muser": "3.0.x-dev",
         "drupal/pathauto": "^1.1",
         "drupal/queue_mail": "^1.5",
-        "drupal/rabbit_hole": "^1.0@beta",
+        "drupal/rabbit_hole": "^2.0",
         "drupal/realname": "^2.0",
-        "drupal/redirect": "^1.7",
+        "drupal/rebuild_cache_access": "^1.10",
+        "drupal/redirect": "^1.1",
         "drupal/redis": "^1.2",
-        "drupal/roleassign": "^1.0@alpha",
-        "drupal/smart_trim": "^1.3",
+        "drupal/roleassign": "^2.0",
+        "drupal/simple_sitemap": "^4.2",
+        "drupal/smart_trim": "^2.0",
+        "drupal/taxonomy_manager": "^2.0",
         "drupal/token": "^1.1",
         "drupal/twig_field_value": "^2.0",
         "drupal/views_ajax_history": "^1.0",
         "drupal/views_bulk_operations": "^4.1",
         "drupal/views_data_export": "^1.3",
+        "drupal/views_random_seed": "^1.3",
         "drush/drush": "^10 | ^11 | ^12",
         "jackmoore/colorbox": "^1.6",
         "kenwheeler/slick": "^1.8",
@@ -135,14 +124,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-
+        "sort-packages": true,
+        "process-timeout": 1800,
         "allow-plugins": {
             "composer/installers": true,
             "cweagans/composer-patches": true,
             "drupal/core-composer-scaffold": true
-        },
-        "sort-packages": true,
-        "process-timeout": 900
+        }
     },
     "scripts": {
         "remove-git-submodules": "find . -mindepth 2 -type d -name .git | xargs rm -rf",
@@ -205,19 +193,18 @@
             ]
         },
         "patches": {
-            "drupal/block_content_permissions": {
-                "Allow accessing the \"Custom block library\" page without \"Administer blocks\" permission": "https://www.drupal.org/files/issues/2022-07-26/2920739-55.access_listing_page.patch"
+            "d34dman/vanilla-icon-picker": {
+                "TypeError if JSON files do not include categories - https://github.com/AppoloDev/vanilla-icon-picker/issues/39": "patches/vanilla-icon-picker-fix-categories-issue.patch"
             },
             "drupal/colorbox_media_video": {
                 "Add is_responsive_video field to colorbox media video fields": "https://www.drupal.org/files/issues/2022-07-27/3300344-3.colorbox_media_video--responsive-video-option.patch"
             },
-            "drupal/config_ignore": {
-                "Support for export filtering via Drush": "https://www.drupal.org/files/issues/2021-01-04/config_ignore_2857247-61.patch"
-            },
             "drupal/core": {
-                "Allow Tours to be taken by users that cannot access the Toolbar (e.g. anonymous users)": "patches/2069073-64.local-reroll.patch",
+                "Allow Tours to be taken by users that cannot access the Toolbar (e.g. anonymous users)": "patches/tour-block-no-css-2069073-103.local-reroll.patch",
                 "TypeError: Argument 1 passed to _editor_get_file_uuids_by_field() must implement interface Drupal\\\\Core\\\\Entity\\\\EntityInterface - Issue for users created by Shib": "https://www.drupal.org/files/issues/2018-11-08/2974156-editor-typeerror-9.patch",
-                "Make views_ajax_history a dependency of media_library to avoid 'The ajax_history plugin does not exist' error @ installation of media_library module view.": "patches/fix-installation-dependencies-issue.patch"
+                "Make views_ajax_history a dependency of media_library to avoid 'The ajax_history plugin does not exist' error @ installation of media_library module view.": "patches/fix-installation-dependencies-issue.patch",
+                "READ COMMITTED requirement check doesn't account for database views": "https://www.drupal.org/files/issues/2023-08-04/3362726-8.exclude-views-from-table-list.patch",
+                "maintenance-page--offline.html.twig is not picked up when system is offline ": "https://www.drupal.org/files/issues/2024-01-18/2720109-145.maintenance-page.patch"
             },
             "drupal/entity_reference_revisions": {
                 "Views doesn't recognize relationship to host": "https://www.drupal.org/files/issues/2019-10-07/2799479-91-DO_NOT_COMMIT.patch",
@@ -226,11 +213,14 @@
             "drupal/flag": {
                 "Add basic theming for Flagging entities": "https://www.drupal.org/files/issues/2019-01-28/2460141-9.theme-flagging-entity.patch"
             },
-            "drupal/honeypot": {
-                "Missing primary key in table `honeypot_user`": "https://www.drupal.org/files/issues/2023-07-10/honeypot-add_primary_key-2943526-64.patch"
+            "drupal/rabbit_hole": {
+                "TypeError: array_map(): Argument #2 ($array) must be of type array, null given in array_map()": "https://www.drupal.org/files/issues/2024-02-09/3375025--15152836-rabbit_hole--fix-enabled_types-config.patch"
             },
-            "drupal/queue_mail": {
-                "Queued emails are not sent by the cron job": "https://www.drupal.org/files/issues/2023-08-14/3381103-queue_mail_fix_cron-1.patch"
+            "drupal/views_random_seed": {
+                "Random seed and page cache (and more)": "https://www.drupal.org/files/issues/2022-10-03/views_random_seed-fix_page_caching-3313251-2.patch"
+            },
+            "drush/drush": {
+                "Make 'drush sql-drop' drop SQL views, too" : "patches/drush-sql-drop-with-views.patch"
             },
             "kint-php/kint": {
                 "PHP 8.1 - TypeError Cannot assign stdClass to reference held by property #390" : "patches/kint-390-php81-type-error.patch"
